--- a/src/components/HeroSection/HeroSection.module.css
+++ b/src/components/HeroSection/HeroSection.module.css
@@ -35,7 +35,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   /* min-height: 503px; */
-  min-height: 50vh;
+  min-height: 503px;
 }
 
 .button_wrap {
