--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -85,7 +85,7 @@
   display: none;
   font-weight: 300;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 1.5em;
   letter-spacing: 0.03em;
 }
 
