--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -2,14 +2,14 @@ div p {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 24px;
-  line-height: 133%;
+  line-height: 1.33em;
   letter-spacing: 0.06em;
 }
 
 @media screen and (min-width: 768px) {
   div p {
     font-size: 30px;
-    line-height: 107%;
+    line-height: 1em;
     letter-spacing: 0.05em;
   }
 }
@@ -17,6 +17,6 @@ div p {
 @media screen and (min-width: 1280px) {
   div p {
     font-size: 32px;
-    line-height: 100%;
+    line-height: 1em;
   }
 }
