start product page

--- a/src/components/CollectionSection/CollectionSection.module.css
+++ b/src/components/CollectionSection/CollectionSection.module.css
@@ -49,6 +49,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  color: var(--black);
+}
+
+a {
+  color: var(--black);
 }
 
 .product_item:first-child {
