--- a/src/index.css
+++ b/src/index.css
@@ -1,42 +1,42 @@
 @font-face {
   font-family: 'Poppins';
-  src: url('./fonts/Poppins-Light.ttf');
+  src: url('/fonts/Poppins-Light.ttf');
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: url('./fonts/Poppins-Regular.ttf');
+  src: url('/fonts/Poppins-Regular.ttf');
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: url('./fonts/Poppins-Medium.ttf');
+  src: url('/fonts/Poppins-Medium.ttf');
   font-weight: 500;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: url('./fonts/Poppins-SemiBold.ttf');
+  src: url('/fonts/Poppins-SemiBold.ttf');
   font-weight: 600;
 }
 
 @font-face {
   font-family: 'Lato';
-  src: url('./fonts/Lato-Light.ttf');
+  src: url('/fonts/Lato-Light.ttf');
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'Lato';
-  src: url('./fonts/Lato-Regular.ttf');
+  src: url('/fonts/Lato-Regular.ttf');
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'Lato';
-  src: url('./fonts/Lato-Bold.ttf');
+  src: url('/fonts/Lato-Bold.ttf');
   font-weight: 700;
 }
 
