--- a/src/components/ReviewsSection/ReviewsSection.module.css
+++ b/src/components/ReviewsSection/ReviewsSection.module.css
@@ -1,5 +1,7 @@
 .reviews {
   padding: 40px 20px 45px;
+  backdrop-filter: blur(10px);
+  background: linear-gradient(239deg, #cab3a1 0%, #a98d77 100%);
 }
 
 .title {
@@ -10,11 +12,118 @@
   letter-spacing: 0.34em;
   text-transform: uppercase;
   padding-bottom: 40px;
+  text-align: center;
+}
+
+.slider_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.button {
+  cursor: pointer;
+  background-color: #333333;
+  opacity: 0.62;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  font-size: 24px;
+  transition: opacity 0.3s ease;
+  display: none;
+  align-items: center;
+}
+
+.button.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  background-color: var(--dirty-beige);
+}
+
+.slider {
+  overflow: hidden;
+}
+
+.reviews_list {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.review_item {
+  /* padding: 32px;
+  background: var(--grey);
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 24px;
+  flex: 0 0 calc(100% - 5px);
+  margin-right: 5px;
+  box-sizing: border-box; */
+
+  flex: 0 0 100%; /* один элемент занимает весь слайдер */
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+.review_content {
+  max-width: 320px;
+  width: 100%;
+  background: var(--grey);
+  border-radius: 16px;
+  padding: 32px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+}
+
+.text {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.5em;
+  letter-spacing: 0.03em;
+}
+
+.author {
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 0.03em;
+}
+
+.btn_mob {
+  display: flex;
+  column-gap: 24px;
+  justify-content: flex-end;
+}
+
+.button_mob {
+  cursor: pointer;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  font-size: 24px;
+  transition: opacity 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333333;
+  opacity: 0.62;
+  margin-top: 24px;
+}
+
+.button_mob:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  background-color: var(--dirty-beige);
 }
 
 @media screen and (min-width: 768px) {
   .reviews {
-    padding: 40px 32px 45px;
+    padding: 40px 32px 80px;
   }
 
   .title {
@@ -22,5 +131,41 @@
     line-height: 1.7em;
     letter-spacing: 0.33em;
     padding-bottom: 54px;
+  }
+
+  .btn_mob {
+    display: none;
+  }
+
+  .button {
+    display: flex;
+  }
+
+  .review_content {
+    max-width: 400px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .reviews {
+    padding: 80px 32px 100px;
+  }
+
+  .title {
+    font-size: 80px;
+    letter-spacing: 0.21em;
+    padding-bottom: 127px;
+  }
+
+  .slider_wrapper {
+    gap: 80px;
+  }
+
+  .review_item {
+    flex: 0 0 50%; /* две карточки в ряду */
+  }
+
+  .review_content {
+    max-width: 487px;
   }
 }
