--- a/src/components/HeroSection/HeroSection.module.css
+++ b/src/components/HeroSection/HeroSection.module.css
@@ -57,7 +57,8 @@
   z-index: 5;
   align-items: center;
   max-width: 416px;
-  justify-content: center;
+  justify-content: flex-start;
+  align-self: flex-start;
 }
 
 .arrow {
@@ -77,20 +78,27 @@
   font-size: 18px;
   letter-spacing: 0.22em;
   text-transform: uppercase;
+  text-align: left;
   color: var(--black);
   z-index: 5;
+  position: relative;
+  top: 0;
+  left: 3%;
 }
 
 .hero_button_link::after {
   content: '';
+  position: absolute;
   width: 169px;
   height: 64px;
-  z-index: -1;
-  margin-left: -47px;
   background-color: var(--light-brown);
   border-radius: 16px;
   box-shadow: 5px 5px 4px 0 rgba(0, 0, 0, 0.25);
-  transition: background-color 0.2s var(--dirty-brown);
+  transition: background-color 0.2s ease-in-out;
+  z-index: -1;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
 }
 
 @media screen and (min-width: 768px) {
@@ -149,11 +157,13 @@
   .hero_button {
     font-size: 16px;
     letter-spacing: 0.25em;
+    left: 20%;
   }
 
   .hero_button_link::after {
     width: 204px;
     height: 82px;
+    left: unset;
   }
 }
 
@@ -191,6 +201,7 @@
   .hero_button {
     font-size: 20px;
     letter-spacing: 0.2em;
+    left: 25%;
   }
 
   .hero_button_link::after {
