--- a/src/blocks/Components/AnimatedList/AnimatedList.css
+++ b/src/blocks/Components/AnimatedList/AnimatedList.css
@@ -4,13 +4,13 @@
 
 .scroll-list-container {
   position: relative;
-  /* width: 500px; */
 }
 
 .scroll-list {
-  /* max-height: 400px; */
   overflow-y: auto;
-  /* padding: 16px; */
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
 }
 
 .scroll-list::-webkit-scrollbar {
@@ -29,25 +29,28 @@
 .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
-
 .no-scrollbar {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
 
-.item {
-  padding: 20px 10px;
-  border-radius: 16px;
-  background: #e4e5e6;
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
+.item-text {
+  margin: 0;
 }
 
-.item-text {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 300;
-  font-size: 10px;
-  line-height: 2em;
-  letter-spacing: 0.05em;
+@media screen and (min-width: 768px) {
+  .scroll_list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-bottom: 80px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .scroll_list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
+    padding-bottom: 150px;
+  }
 }
