--- a/src/components/SaleSection/SaleSection.module.css
+++ b/src/components/SaleSection/SaleSection.module.css
@@ -97,13 +97,18 @@
   background: var(--light-grey);
 }
 
+@media screen and (max-width: 375px) {
+  .title {
+    font-size: 26px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .sale {
     padding: 124px 32px;
   }
 
   .slider {
-    /* width: 70%; */
     width: 60%;
   }
 
