--- a/src/components/LineSection/LineSection.module.css
+++ b/src/components/LineSection/LineSection.module.css
@@ -133,6 +133,10 @@
   }
 }
 
+.line_section {
+  padding-top: 20px;
+}
+
 @media only screen and (min-width: 768px) {
   .marquee {
     font-size: 36px;
@@ -164,6 +168,10 @@
     position: relative;
     padding-left: 30px;
     padding-right: 24px;
+  }
+
+  .line_section {
+    padding-top: 40px;
   }
 }
 
